Fixed screen height issues and adjusted detailview header alignment

--- a/src/App.css
+++ b/src/App.css
@@ -84,8 +84,13 @@ html, body, #root {
     display: flex; 
     gap: 3rem; 
     align-items: center; 
-    margin-bottom: 3rem; 
+    margin-bottom: 3rem;
+    margin-top: 2rem;
     margin-left: 2rem;
+  }
+
+  .detail-header h1 { 
+    margin-top: 0; 
   }
 
   .detail-patch { 
