--- a/src/components/LiquidGlass.css
+++ b/src/components/LiquidGlass.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
+  width: max-content;
   min-height: 100%;
   pointer-events: none;
   border-radius: 2rem;
@@ -17,11 +18,33 @@
   border-radius: 2.5rem;
 }
 
+.sidenav-wrapper {
+  display: flex;
+  position: fixed;
+  top: 2rem;
+  left: 2rem;
+  gap: 25px;
+  flex-direction: column;
+  height: calc(100vh - 4rem);
+  justify-content: center;
+  align-items: flex-end;
+  width: max-content;
+  pointer-events: none;
+  border-radius: 2rem;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
+}
+
+.sidenav-wrapper:hover {
+  transform: scale(1.015);
+  border-radius: 2.5rem;
+}
+
 .list-wrapper {
   display: flex;
   gap: 25px;
+  max-height: 100%;
   flex-direction: column;
-  flex-grow: 1;
+  flex: 1;
   justify-content: center;
   align-items: flex-end;
   overflow-y: auto;
@@ -29,6 +52,10 @@
   border-radius: 2rem;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+body:has(.list-wrapper) main {
+  height: calc(100vh - 4rem);
 }
 
 .list-wrapper:hover {
